syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;user_v1";
service User {
    // ----------------------
    // 1. 认证与注册 (Auth)
    // ----------------------

    // 注册用户
    // 对应 Service: CreateUser
    // 注意：注册成功后直接返回用户信息和生成的钱包地址
    rpc Register (RegisterReq) returns (RegisterResp);

    // 用户登录
    // 对应 Service: Login
    // 支持 用户名/邮箱/手机号 + 密码
    rpc Login (LoginReq) returns (LoginResp);

    // 修改密码
    // 对应 Service: UpdatePassword
    rpc UpdatePassword (UpdatePasswordReq) returns (UpdatePasswordResp);

    // ----------------------
    // 2. 用户信息查询 (Profile)
    // ----------------------

    // 获取当前用户信息 (支持 ID 查询)
    // 对应 Service: GetUserByID
    rpc GetUserInfo (GetUserInfoReq) returns (GetUserInfoResp);

    // ----------------------
    // 3. 管理员/后台接口 (Admin)
    // ----------------------

    // 修改用户状态 (禁用/启用)
    // 对应 Service: EnableUser / DisableUser
    rpc UpdateUserStatus (UpdateUserStatusReq) returns (UpdateUserStatusResp);

    // 更新基础信息 (邮箱/手机号)
    // 对应 Service: UpdateUser
    rpc UpdateUserProfile (UpdateUserProfileReq) returns (UpdateUserProfileResp);

    // ----------------------
    // 4. 内部微服务调用 (Internal - 供 Wallet/Scanner 调用)
    // ----------------------

    // 根据钱包地址反查用户ID
    // 对应 Service: GetUserIDByAddress
    // 场景：Scanner 扫到一笔充值，需要知道是谁充的
    rpc GetUserByAddress (GetUserByAddressReq) returns (GetUserByAddressResp);
}

// ==========================================
// 消息定义 (Messages)
// ==========================================

// --- 枚举定义 ---

enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0; // 默认零值
    USER_STATUS_DISABLED = 1;    // 禁用
    USER_STATUS_ENABLED = 2;     // 启用
}

// --- 基础模型 ---

// 钱包地址信息
message AddressInfo {
    string chain = 1;   // "BTC", "ETH"
    string address = 2; // "0x..."
}

// 核心用户信息 (不包含密码！)
message UserProfile {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    UserStatus status = 5;
    int64 created_at = 6;      // Unix 时间戳 (秒)
    int64 last_login_at = 7;   // Unix 时间戳 (秒)
    repeated AddressInfo addresses = 8; // 用户关联的地址列表
}


// --- 请求/响应定义 ---

// 1. Register
message RegisterReq {
    string username = 1;
    string email = 2;
    string phone = 3;    // 可选
    string password = 4; // 原始密码 (传输层建议开启 TLS)
    string req_id = 5;   // 幂等性ID (UUID)
}

message RegisterResp {
    UserProfile user = 1; // 注册成功返回完整信息(含地址)
}

// 2. Login
message LoginReq {
    // 你的 Service 中 Login 第一个参数是 "account"
    // 前端直接传 input 里的内容，后端自己判断是 email 还是 username
    string account = 1; 
    string password = 2;
    string ip = 3;       // 对应 Service 的 last_login_ip
}

message LoginResp {
    UserProfile user = 1;
    // 在微服务网关层，这里通常还会返回一个 jwt_token
    // 但 User 服务只负责返回 User 数据，Token 由网关签发
}

// 3. UpdatePassword
message UpdatePasswordReq {
    int64 user_id = 1;
    string old_password = 2;
    string new_password = 3;
}

message UpdatePasswordResp {
    bool success = 1;
}

message GetUserInfoReq {
    // 使用 oneof，代表一次请求只能传其中一种
    oneof query {
        int64 user_id = 1;
        string username = 2;
        string email = 3;
        string phone = 4;
    }
}

message GetUserInfoResp {
    UserProfile user = 1;
}

// 5. UpdateUserStatus
message UpdateUserStatusReq {
    int64 user_id = 1;
    UserStatus status = 2; // 传入 ENABLED 或 DISABLED
}

message UpdateUserStatusResp {
    bool success = 1;
}

// 6. UpdateUserProfile
message UpdateUserProfileReq {
    int64 user_id = 1;
    string email = 2;    // 如果为空则不修改
    string phone = 3;    // 如果为空则不修改
}

message UpdateUserProfileResp {
    bool success = 1;
}

// 7. GetUserByAddress (Internal)
message GetUserByAddressReq {
    string address = 1;
}

message GetUserByAddressResp {
    int64 user_id = 1;
}